--- a/FrontEnd/src/css/Header.css
+++ b/FrontEnd/src/css/Header.css
@@ -1,5 +1,5 @@
 .header{
-    position: relative;
+    position: static;
     width: 100%;
     height: 10vh;
     background: rgb(4,4,4);
@@ -27,4 +27,17 @@
     height: 100%;
     display: flex;
     align-items: center;
+}
+
+.define a{
+    height: 100%;
+}
+
+.footer{
+    width: 100%;
+    height: 10vh;
+    background: rgb(4,4,4);
+    background: linear-gradient(0deg, rgba(4,4,4,1) 0%, rgba(185,185,185,0.7707457983193278) 65%, rgba(242,242,242,0) 100%);
+    position: absolute;
+    bottom: 0;
 }
