--- a/FrontEnd/src/css/Header.css
+++ b/FrontEnd/src/css/Header.css
@@ -41,3 +41,32 @@
     position: absolute;
     bottom: 0;
 }
+
+.searchbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+.search{
+    display: inline-flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.result{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.result img{
+    width: 100px;
+}
+
+p{
+    font-family: 'Roboto Condensed', sans-serif;
+}
